
* docutils/writers/manpage.py

  - Fix: supported attribute (thanks to peter2108).
  - Remove trailing blanks in code (keep in sync with mercurial version).
  - Titles level 1, that is ``.SH``, always uppercase.
  - Apply patch from mg: literal text should be bold in man-pages.

* docutils/nodes.py

  - Fix: encoding ``'ascii'`` must be lowercase to prevent problems for
    turkish locale.

Release 0.6 (2009-10-11)
========================

* General:

  - Docutils is now compatible with Python versions from 2.3 up to 2.6
    and convertible to 3.1 code.

    + Node.__nonzero__ returns True instead of 1.
    + use os.walk instead os.path.walk.
    + minimize "types" module where possible.
    + Backwards-compatible changes to remove python2.6 -3 deprecation warnings
    + Text nodes now subclass unicode rather than UserString
      (which is gone in python 3.0).
    + 3.0 compatibility module docutils._compat

    + Drop 2.2 compatibility workarounds.
    + Drop extras/optparse.py and extras/textwrap.py
      (stdlib modules since 2.3).

  - OpenOffice export: ODT writer moved from sandbox to Doctutils core.
  - Unix man page export: manpage writer moved from sandbox to Doctutils
    core.

  - Apply [ 1719345 ] Galician translation
  - Apply [ 1905741 ] Polish translation
  - Apply [ 1878977 ] make_id(): deaccent characters.
  - Apply [ 2029251 ] return nonzero when tests fail.
  - Fix [ 1692788 ] allow UTF-8 in style sheets.
  - Fix [ 2781629 ] support non-ASCII chars in file names.
  - Apply [ 2845002 ] let ``--no-raw`` disable raw *roles* too.
  - Fix [ 2831643 ] by renaming DirectiveError.message to DirectiveError.msg
  - Fix [ 2821266 ] --strict option works now like --halt=info.
  - Fix [ 2788716 ] DirectiveError now correctly reports source and line.
  - Fix [ 1627229 ] hyperlink references in substitutions.

  - The "newlatex" writer is orphaned.

* reStructuredText:

  - Documented Unicode characters allowed as inline markup openers,